Adding scraping.py

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/largesize/PIA14417_hires.jpg'"
+       "'/spaceimages/images/largesize/PIA18811_hires.jpg'"
       ]
      },
      "execution_count": 12,
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA14417_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18811_hires.jpg'"
       ]
      },
      "execution_count": 13,
@@ -240,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
