--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -39,7 +39,7 @@
     "# Set the executable path and initialize the chrome browser in splinter\n",
     "#executable_path = {'executable_path': 'chromedriver'}\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path)"
+    "browser = Browser('chrome', **executable_path, headless=True)"
    ]
   },
   {
@@ -70,11 +70,23 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<li class=\"slide\"><div class=\"image_and_description_container\"><a href=\"/news/8830/celebrate-the-perseverance-rover-landing-with-nasas-student-challenge/\" target=\"_self\"><div class=\"rollover_description\"><div class=\"rollover_description_inner\">The rover touches down on the Red Planet next month, and students are invited to join the excitement by designing, building, and landing their own Mars mission. NASA can help.</div><div class=\"overlay_arrow\"><img alt=\"More\" src=\"/assets/overlay-arrow.png\"/></div></div><div class=\"list_image\"><img alt=\"Collage for mission to Mars\" src=\"/system/news_items/list_view_images/8830_C1-marsworkshop_web-320x240.jpg\"/></div><div class=\"bottom_gradient\"><div><h3>Celebrate the Perseverance Rover Landing With NASA's Student Challenge</h3></div></div></a><div class=\"list_text\"><div class=\"list_date\">January  8, 2021</div><div class=\"content_title\"><a href=\"/news/8830/celebrate-the-perseverance-rover-landing-with-nasas-student-challenge/\" target=\"_self\">Celebrate the Perseverance Rover Landing With NASA's Student Challenge</a></div><div class=\"article_teaser_body\">The rover touches down on the Red Planet next month, and students are invited to join the excitement by designing, building, and landing their own Mars mission. NASA can help.</div></div></div></li>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "html = browser.html\n",
     "news_soup = soup(html, 'html.parser')\n",
-    "slide_elem = news_soup.select_one('ul.item_list li.slide')"
+    "slide_elem = news_soup.select_one('ul.item_list li.slide')\n",
+    "slide_elem"
    ]
   },
   {
@@ -85,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\"><a href=\"/news/8822/a-martian-roundtrip-nasas-perseverance-rover-sample-tubes/\" target=\"_self\">A Martian Roundtrip: NASA's Perseverance Rover Sample Tubes</a></div>"
+       "<div class=\"content_title\"><a href=\"/news/8830/celebrate-the-perseverance-rover-landing-with-nasas-student-challenge/\" target=\"_self\">Celebrate the Perseverance Rover Landing With NASA's Student Challenge</a></div>"
       ]
      },
      "execution_count": 5,
@@ -105,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "\"A Martian Roundtrip: NASA's Perseverance Rover Sample Tubes\""
+       "\"Celebrate the Perseverance Rover Landing With NASA's Student Challenge\""
       ]
      },
      "execution_count": 6,
@@ -127,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Marvels of engineering, the rover's sample tubes must be tough enough to safely bring Red Planet samples on the long journey back to Earth in immaculate condition. \""
+       "'The rover touches down on the Red Planet next month, and students are invited to join the excitement by designing, building, and landing their own Mars mission. NASA can help.'"
       ]
      },
      "execution_count": 7,
@@ -201,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/largesize/PIA18811_hires.jpg'"
+       "'/spaceimages/images/largesize/PIA18358_hires.jpg'"
       ]
      },
      "execution_count": 12,
@@ -223,7 +235,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18811_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18358_hires.jpg'"
       ]
      },
      "execution_count": 13,
